--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: minima
-title: Bello's github site
+title: Bello's Blog page
 author: Naziff Bello
 description: This is a simple page website
